# rv1126b

./: .gitignore  README.md  ~$文档_第三部分草稿_可读版_20260704.docx  比赛文档_第三部分草稿_20260704.docx  比赛文档_第三部分草稿_可读版_20260704.docx  比赛文档_第三部分草稿_可读版_20260704_音频更新.docx  比赛文档_第三部分草稿_可读版_20260704_音频更新_前两部分完善.docx
rv1126b_vision_app/: .gitignore  CMakeLists.txt  README.md  Types.hpp  lv_conf.h  run_demo.sh
rv1126b_vision_app/docs/: ST7789实机点屏前检查清单.md  ST7789驱动修改指南.md  code_review_log_2026-06-17.md  current_capabilities.md  demo_run.md  gesture_single_image_test.md  model_outputs.md  中文使用指南.md  姿态模型以及逻辑迁移说明.md  姿态模型接入说明.md  手势模型接入说明.md  板端预处理方案测试说明.md  水杯模型接入说明.md
rv1126b_vision_app/docs/competition/: 01_project_facts.md  02_document_blueprint.md  03_abstract_and_part1.md  04_part2_system_design.md  05_summary_and_references.md  06_review_report.md  06_stage_revised_draft.md  07_part3_materials_and_test_plan.md  08_full_rewrite_plan.md  09_abstract_part1_rewritten.md  11_part2_rewrite_report.md  11_part2_rewritten.md  13_my_scope_final_review.md  13_my_scope_final_text.md  14_my_scope_final_text_polished.md  14_my_scope_handoff.md  audio_update_docx_text.txt  audio_update_front_revised_text.txt  ~$文档_v0.1_文字版.docx  基于RV1126B的端侧视觉健康守护系统_比赛文档初稿.docx  比赛文档_v0.1_文字版.docx  比赛文档_v0.1_文字版.md
rv1126b_vision_app/docs/competition/figures/: 10_figures_review_report.md  fig1_1_system_function.md  fig1_3_design_flow.md  fig2_1_system_architecture.md  fig2_1_system_overview.md  fig2_1_system_overview_self_check.md  fig2_3_software_architecture.md  fig2_3_software_architecture_self_check.md  fig2_4_main_program_flow.md  fig2_4_main_program_flow_self_check.md  fig2_5_gesture_state_machine.md  fig2_5_gesture_state_machine_self_check.md  fig2_6_drink_reminder_flow.md  fig2_6_drink_reminder_flow_self_check.md  figure_style.py  figure_style_guide.md  generate_fig1_1_system_function.py  generate_fig1_3_design_flow.py  generate_fig2_1_system_overview.py  generate_fig2_3_software_architecture.py  generate_fig2_4_main_program_flow.py  generate_fig2_5_gesture_state_machine.py  generate_fig2_6_drink_reminder_flow.py  generate_figures.py
rv1126b_vision_app/docs/competition/render_final_docx/: final_readable_draft.md
rv1126b_vision_app/docs/competition/tools/: update_audio_docx_front_sections.py
rv1126b_vision_app/include/: App.hpp  BlockingQueue.hpp  FlvMuxer.hpp  FramePool.hpp  Interfaces.hpp  PerceptionModules.hpp  RknnModel.hpp  ThreadPool.hpp  Types.hpp  VideoPipeline.hpp  WebRtcTransport.hpp
rv1126b_vision_app/model/: gesture_mobilenetv3_small_fp16.rknn  yolov5_gesture_rv1126b.rknn
rv1126b_vision_app/src/: App.cpp  CameraDevice.cpp  DisplayDevice.cpp  FlvMuxer.cpp  GestureModel.cpp  MqttClient.cpp  PerceptionModules.cpp  PostureDrinkModel.cpp  RknnModel.cpp  VideoPipeline.cpp  WebRtcTransport.cpp  WebStreamer.cpp  main.cpp
rv1126b_vision_app/tools/: gesture_image_test.cpp  rtsp_relay.cpp  single_image_ai_debug.cpp
